--- a/public/style.css
+++ b/public/style.css
@@ -15,7 +15,7 @@ body {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	padding-inline: 20px;
+	padding: 0px 20px;
 }
 
 /* heading */
@@ -28,26 +28,19 @@ h1 {
 
 #board {
 	--size: 5;
-	margin-block: 50px;
 	display: grid;
 	width: min(90vw, 400px);
 	height: min(90vw, 400px);
 	grid-template-columns: repeat(var(--size), 1fr);
 	grid-template-rows: repeat(var(--size), 1fr);
 	gap: calc(20% / var(--size));
+	margin: 50px 0px;
 }
 
 /* checkboxes and labels */
 
 input[type="checkbox"] {
-	opacity: 0;
-	position: absolute;
-	left: -100vw;
-}
-
-input[type="checkbox"]:focus-visible + label {
-	outline: 2px solid white;
-	outline-offset: 2px;
+	display: none;
 }
 
 input[type="checkbox"]:checked + label {
@@ -59,9 +52,9 @@ input[type="checkbox"]:not(:checked) + label {
 	background-color: #222;
 }
 
-label {
+#board label {
 	border-radius: 5px;
-	transition: background-color 200ms linear, box-shadow 200ms linear;
+	transition: background-color 200ms, box-shadow 200ms;
 	cursor: pointer;
 }
 
@@ -72,7 +65,7 @@ label {
 	margin: 20px 0px;
 	opacity: 0;
 	scale: 0;
-	transition: opacity 150ms ease-out, scale 150ms ease-out;
+	transition: opacity 150ms, scale 150ms;
 }
 
 #win.visible {
@@ -117,7 +110,6 @@ button:active {
 input[type="text"] {
 	font-family: inherit;
 	background: none;
-	border: none;
 	color: inherit;
 	font-size: inherit;
 	border: 2px solid white;
